[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/Enemies/TheWitch/Spells/WineWaveSummon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/TheWitch/Spells/WineWaveMoving.png" type="Texture" id=2]
[ext_resource path="res://src/CollisionTemplates/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Enemies/TheWitch/Spells/WineWave.gd" type="Script" id=4]
[ext_resource path="res://Assets/Enemies/TheWitch/Spells/WineWaveVanish.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2048, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2048, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2304, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Summon",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Vanish",
"speed": 8.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Moving",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 106.327, 20.5793 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 124.005, 19.9137 )

[sub_resource type="CapsuleShape2D" id=27]
radius = 40.0822
height = 58.1719

[sub_resource type="CapsuleShape2D" id=28]
radius = 57.0571
height = 97.3253

[node name="WineWave" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -127.877 )
frames = SubResource( 24 )
animation = "Vanish"
frame = 9
playing = true

[node name="HitBoxSmallBody" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 16

[node name="CollisionShape2D" parent="HitBoxSmallBody" index="0"]
position = Vector2( 20.8937, -21.5359 )
shape = SubResource( 25 )
disabled = true

[node name="HitBoxFullBody" parent="." instance=ExtResource( 3 )]
collision_layer = 16

[node name="CollisionShape2D" parent="HitBoxFullBody" index="0"]
position = Vector2( 0, -28.6308 )
shape = SubResource( 26 )
disabled = true

[node name="HitBoxSmallWave" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 16

[node name="HitBoxMediumWave" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 16

[node name="CollisionShape2D" parent="HitBoxMediumWave" index="0"]
position = Vector2( 64.8102, -80.2007 )
rotation = 0.785398
shape = SubResource( 27 )
disabled = true

[node name="HitBoxFullWave" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 16

[node name="CollisionShape2D" parent="HitBoxFullWave" index="0"]
position = Vector2( 54.5718, -139.28 )
shape = SubResource( 28 )
disabled = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="HitBoxFullBody" to="." method="_on_HitBoxFullBody_body_entered"]

[editable path="HitBoxSmallBody"]

[editable path="HitBoxFullBody"]

[editable path="HitBoxSmallWave"]

[editable path="HitBoxMediumWave"]

[editable path="HitBoxFullWave"]
